// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.example;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/example";

// Chrome allows basic remote operations of Chrome.
service ChromeService {
  // New logs into a Chrome session as a fake user. Close must be called later
  // to clean up the associated resources.
  rpc New (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Close releases the resources obtained by New.
  rpc Close (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // EvalOnTestAPIConn evaluates a JavaScript expression in the test extension
  // background page.
  rpc EvalOnTestAPIConn (EvalOnTestAPIConnRequest)
      returns (EvalOnTestAPIConnResponse) {}
}

message EvalOnTestAPIConnRequest {
  string expr = 1;
}

message EvalOnTestAPIConnResponse {
  string value_json = 1;
}
